Adding rotation enum