@@ -5,29 +5,29 @@ import com.github.tylersharpe.tetris.Block;
 
 import javax.swing.border.TitledBorder;
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 
 class BlockDisplayPanel extends PixelGrid {
 
-  static final int DEFAULT_BLOCK_DIMENSION = 35;
-  private static final int BLOCK_PADDING = 15;
+  public static final int DEFAULT_BLOCK_DIMENSION = 35;
+  public static final int DEFAULT_BLOCK_PADDING = 15;
 
-  private Block currentBlock;
+  private Block displayedBlock;
 
   BlockDisplayPanel(String title) {
     this(title, null);
   }
 
-  BlockDisplayPanel(String title, Block currentBlock) {
-    super(4, 5, DEFAULT_BLOCK_DIMENSION, BLOCK_PADDING);
+  BlockDisplayPanel(String title, Block displayedBlock) {
+    super(4, 5, DEFAULT_BLOCK_DIMENSION, DEFAULT_BLOCK_PADDING);
     setBorder(new TitledBorder(title));
     setFocusable(false);
-    this.currentBlock = currentBlock;
+    this.displayedBlock = displayedBlock;
   }
 
   @Override
   public Collection<Block.ColoredSquare> getCurrentColors() {
-    return currentBlock == null ? Collections.emptyList() : currentBlock.getNextPanelSquares();
+    return displayedBlock == null ? List.of() : displayedBlock.getNextPanelSquares();
   }
 
 }
